--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1010,6 +1010,19 @@
   timestamp = {2019.04.10},
 }
 
+@Article{Akritidis2023,
+  author    = {Akritidis, L. and Bozanis, P.},
+  title     = {Low-Dimensional Text Representations for Sentiment Analysis NLP Tasks},
+  journal   = {SN Computer Science},
+  year      = {2023},
+  volume    = {4},
+  number    = {5},
+  pages     = {474},
+  doi       = {10.1007/s42979-023-01913-y},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+}
+
 @Article{Aks1996,
   author    = {Aks, D. J. and Sprott, J. C.},
   title     = {Quantifying Aesthetic Preference for Chaotic Patterns},
@@ -2065,6 +2078,16 @@
   owner     = {Vincent},
   timestamp = {2022.03.25},
   url       = {http://ceur-ws.org/Vol-2769/},
+}
+
+@Book{Andreescu2021,
+  title     = {Handbook of Research on Contemporary Storytelling Methods Across New Media and Disciplines},
+  publisher = {IGI Global},
+  year      = {2021},
+  author    = {Andreescu, R. and Dimitriu, A.},
+  doi       = {10.4018/978-1-7998-6605-3},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
 }
 
 @Article{Andresen2022,
@@ -10778,6 +10801,17 @@
   doi       = {10.1007/978-3-642-23214-5_42},
   owner     = {Vincent},
   timestamp = {2019.06.28},
+}
+
+@InProceedings{Chen2011a,
+  author    = {Chen, X. and Qi, C.},
+  title     = {A super-resolution method for recognition of license plate character using LBP and RBF},
+  booktitle = {IEEE International Workshop on Machine Learning for Signal Processing},
+  year      = {2011},
+  pages     = {1-5},
+  doi       = {10.1109/mlsp.2011.6064550},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
 }
 
 @Article{Chen2014,
@@ -20497,6 +20531,16 @@
   timestamp = {2020.03.13},
 }
 
+@Book{Gailea2023,
+  title     = {Studies in drama},
+  publisher = {Cv. Azka pustaka},
+  year      = {2023},
+  author    = {Gailea, N.},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+  url       = {https://books.google.fr/books?id=A1LAEAAAQBAJ},
+}
+
 @InProceedings{Gaizauskas2019,
   author    = {Gaizauskas, R. and Alrashid, T.},
   title     = {{SceneML}: A Proposal for Annotating Scenes in Narrative Text},
@@ -29464,6 +29508,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=vdhWenAcwCUC},
 }
 
+@InProceedings{Jugran2021,
+  author    = {Jugran, S. and Kumar, A. and Tyagi, B. S. and Anand, V.},
+  title     = {Extractive Automatic Text Summarization using SpaCy in Python \&amp; NLP},
+  booktitle = {International Conference on Advance Computing and Innovative Technologies in Engineering},
+  year      = {2021},
+  pages     = {582-585},
+  doi       = {10.1109/icacite51222.2021.9404712},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+}
+
 @InProceedings{Jung2004,
   author    = {Jung, B. and Kwak, T. and Song, J. and Lee, Y.},
   title     = {Narrative abstraction model for story-oriented video},
@@ -31911,6 +31966,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.08.18},
   url       = {https://archive.bridgesmathart.org/2011/bridges2011-579.pdf},
+}
+
+@InProceedings{Kolluru2020,
+  author    = {Kolluru, K. and Adlakha, V. and Aggarwal, S. and {Mausam} and Chakrabarti, S.},
+  title     = {OpenIE6: Iterative Grid Labeling and Coordination Analysis for Open Information Extraction},
+  booktitle = {Conference on Empirical Methods in Natural Language Processing},
+  year      = {2020},
+  pages     = {3748-3761},
+  doi       = {10.18653/v1/2020.emnlp-main.306},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
 }
 
 @Book{Kolodziej2019,
@@ -36055,6 +36121,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2024.04.24},
 }
 
+@Book{Li2024,
+  title     = {Advances in Sentiment Analysis: Techniques, Applications, and Challenges},
+  publisher = {IntechOpen},
+  year      = {2024},
+  author    = {Li, J. and Engelbrecht, A.},
+  doi       = {10.5772/intechopen.111293},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+}
+
 @Article{Li2024a,
   author    = {Li, L. and Corbett, J.},
   title     = {Social network analysis, habitus and the field of literary activity},
@@ -36882,6 +36958,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/978-3-031-25069-9_39},
   owner     = {Vincent},
   timestamp = {2023.02.18},
+}
+
+@Article{Liu2023b,
+  author    = {Liu, S. and Nie, W. and Wang, C. and Lu, J. and Qiao, Z. and Liu, L. and Tang, J. and Xiao, C. and Anandkumar, A.},
+  title     = {Multi-modal molecule structure–text model for text-based retrieval and editing},
+  journal   = {Nature Machine Intelligence},
+  year      = {2023},
+  volume    = {5},
+  number    = {12},
+  pages     = {1447–1457},
+  doi       = {10.1038/s42256-023-00759-6},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
 }
 
 @InProceedings{Liu2023h,
@@ -45920,6 +46009,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.08.12},
 }
 
+@InProceedings{Park2022,
+  author    = {Park, M. and Park, S. and Shin, H.},
+  title     = {Literature Representation using Character Networks based on Sentiment Analysis},
+  booktitle = {IEEE International Conference on Big Data and Smart Computing},
+  year      = {2022},
+  pages     = {190-193},
+  doi       = {10.1109/bigcomp54360.2022.00044},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+}
+
 @InProceedings{Park2023,
   author    = {Park, J. S. and O'Brien, J. and Cai, C. J. and Morris, M. R. and Liang, P. and Bernstein, M. S.},
   title     = {Generative Agents: Interactive Simulacra of Human Behavior},
@@ -48858,6 +48958,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/p18-1213},
   owner     = {Vincent},
   timestamp = {2024.04.24},
+}
+
+@InProceedings{Rathnayake2020,
+  author    = {Rathnayake, A. I. and Kumari Ganegala, I. and Samarasinghe, I. S. and Bandara Weerasekara, S. and Gamage, A. I. and Thilakarathna, T.},
+  title     = {Adjusting The Hard Level on Game by a Prediction for Improving Attraction and Business Value},
+  booktitle = {20th International Conference on Advances in ICT for Emerging Regions},
+  year      = {2020},
+  pages     = {310-311},
+  doi       = {10.1109/icter51097.2020.9325474},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
 }
 
 @InProceedings{Ratinov2009,
@@ -60893,6 +61004,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1561/2200000001},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@InProceedings{Wajahat2020,
+  author    = {Wajahat, A. and Nazir, A. and Akhtar, F. and Qureshi, S. and ullah, F. and Razaque, F. and Shakeel, A.},
+  title     = {Interactively Visualize and Analyze Social Network Gephi},
+  booktitle = {3rd International Conference on Computing, Mathematics and Engineering Technologies},
+  year      = {2020},
+  pages     = {1-9},
+  doi       = {10.1109/icomet48670.2020.9073812},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
 }
 
 @Book{Walker1998,
