--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -35185,6 +35185,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.semanticscholar.org/paper/%3A-Basics-of-English-Studies-%3A-An-introductory-for-MILDORF/2ab49ba22914818ace7a2d08689418a7447fa986},
 }
 
+@Article{Leung2007,
+  author    = {Leung, C. C. and Chau, H. F.},
+  title     = {Weighted assortative and disassortative networks model},
+  journal   = {Physica A},
+  year      = {2007},
+  volume    = {378},
+  number    = {2},
+  pages     = {591–602},
+  doi       = {10.1016/j.physa.2006.12.022},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+}
+
 @Article{Levenshtein1966,
   author    = {Levenshtein, V. I.},
   title     = {Binary codes capable of correcting deletions, insertions, and reversals},
@@ -37288,6 +37301,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {https://escholarship.org/uc/item/1ps0b1cg},
+}
+
+@Article{Lovekar2021,
+  author    = {Lovekar, K. and Sengupta, S. and Paul, S.},
+  title     = {Testing for the Network Small-World Property},
+  journal   = {arXiv},
+  year      = {2021},
+  volume    = {stat.ME},
+  pages     = {2103.08035},
+  owner     = {Vincent},
+  timestamp = {2021.03.20},
+  url       = {https://arxiv.org/abs/2103.08035},
 }
 
 @InCollection{Lowe2006,
@@ -50526,6 +50551,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/w16-1406},
   owner     = {Vincent},
   timestamp = {2020.12.19},
+}
+
+@Book{Rodrigue2002,
+  title     = {The Geography of Transport Systems},
+  publisher = {Routledge},
+  year      = {2002},
+  author    = {Rodrigue, J.-P.},
+  doi       = {10.4324/9781003343196},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
 }
 
 @Article{Rodriguez-Planas2018,
