--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -433,6 +433,17 @@
   url       = {https://books.google.fr/books?id=NevbglOeUgsC},
 }
 
+@InProceedings{Afzali2019,
+  author    = {Afzali, M. and Kumar, S.},
+  title     = {Text Document Clustering: Issues and Challenges},
+  booktitle = {International Conference on Machine Learning, Big Data, Cloud and Parallel Computing},
+  year      = {2019},
+  pages     = {263-268},
+  doi       = {10.1109/comitcon.2019.8862247},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+}
+
 @Article{Agaev2005,
   author    = {Agaev, R. and Chebotarev, P.},
   title     = {On the spectra of nonsymmetric Laplacian matrices},
@@ -2809,16 +2820,6 @@
   url       = {https://www.jstor.org/stable/j.ctt3fgz26},
 }
 
-@Book{Auerbach2003,
-  title     = {Mimesis: The Representation of Reality in Western Literature},
-  publisher = {Princeton University Press},
-  year      = {2003},
-  author    = {Auerbach, E.},
-  owner     = {Vincent},
-  timestamp = {2022.11.15},
-  url       = {https://www.jstor.org/stable/j.ctt3fgz26},
-}
-
 @Article{Auger2008,
   author    = {Auger, E. E.},
   title     = {The lord of the rings' interlace: Tolkien's narrative and Lee's illustrations},
@@ -4725,6 +4726,16 @@
   url       = {https://www.routledge.com/Salons-History-and-the-Creation-of-Seventeenth-Century-France-Mastering/Beasley/p/book/9780754653547},
 }
 
+@Book{Beaty1998,
+  title     = {The Norton introduction to literature},
+  publisher = {WW Norton},
+  year      = {1998},
+  author    = {Beaty, J. and Hunter, J. P. and Bain, C. E.},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+  url       = {https://wwnorton.com/books/9780393886306},
+}
+
 @InCollection{Beaty2018,
   author    = {Beaty, B. and Sousanis, N. and Woo, B.},
   title     = {Two Per Cent of What? Constructing a Corpus of Typical American Comic Books},
@@ -5036,6 +5047,16 @@
   owner     = {Vincent},
   timestamp = {2023.11.30},
   url       = {https://www.jstor.org/stable/984802},
+}
+
+@Book{Bengfort2018,
+  title     = {Applied text analysis with Python: Enabling language-aware data products with machine learning},
+  publisher = {O'Reilly Media},
+  year      = {2018},
+  author    = {Bengfort, B. and Bilbro, R. and Ojeda, T.},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+  url       = {https://www.oreilly.com/library/view/applied-text-analysis/9781491963036/},
 }
 
 @PhdThesis{Bengoetxea2003,
@@ -6083,19 +6104,6 @@
   doi       = {10.1016/j.datak.2006.01.013},
   owner     = {Vincent},
   timestamp = {2020.01.04},
-}
-
-@Article{Birant2007a,
-  author    = {Birant, D. and Kut, A.},
-  title     = {{ST}-{DBSCAN}: An algorithm for clustering spatial{\textendash}temporal data},
-  journal   = {Data \& Knowledge Engineering},
-  year      = {2007},
-  volume    = {60},
-  number    = {1},
-  pages     = {208-221},
-  doi       = {10.1016/j.datak.2006.01.013},
-  owner     = {Vincent},
-  timestamp = {2023.04.15},
 }
 
 @InProceedings{Bird2006,
@@ -8621,6 +8629,16 @@
   timestamp = {2023.11.28},
 }
 
+@InProceedings{Budiman2019,
+  author    = {Budiman, I. and Nugrahadi, D. T. and Faisal, M. R. and Rusli, M.},
+  title     = {A Study on Effect of Generated Features From Word2Vec Vectors For Text Classification},
+  booktitle = {International Conference on Wetland and Multidisciplinary Research},
+  year      = {2019},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+  url       = {https://www.researchgate.net/publication/348404518},
+}
+
 @Book{Budniakiewicz1992,
   title     = {Fundamentals of story logic: Introduction to Greimassian semiotics},
   publisher = {John Benjamins},
@@ -9241,6 +9259,19 @@
   doi       = {10.5642/jhummath.201601.15},
   owner     = {Vincent},
   timestamp = {2019.08.18},
+}
+
+@Article{Cahyani2021,
+  author    = {Cahyani, D. E. and Patasik, I.},
+  title     = {Performance comparison of TF-IDF and Word2Vec models for emotion text classification},
+  journal   = {Bulletin of Electrical Engineering and Informatics},
+  year      = {2021},
+  volume    = {10},
+  number    = {5},
+  pages     = {2780–2788},
+  doi       = {10.11591/eei.v10i5.3157},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
 }
 
 @Article{Cai2009,
@@ -10161,23 +10192,12 @@
 @InProceedings{Cer2018a,
   author    = {Cer, D. and Yang, Y. and Kong, S.-Y. and Hua, N. and Limtiaco, N. and Saint John, R. and Constant, N. and Guajardo-Cespedes, M. and Yuan, S. and Tar, C. and Strope, B. and Kurzweil, R.},
   title     = {Universal Sentence Encoder for English},
-  booktitle = {Conference on Empirical Methods in Natural Language Processing: System Demonstrations},
-  year      = {2018},
-  pages     = {169-174},
-  doi       = {10.18653/v1/d18-2029},
-  owner     = {Vincent},
-  timestamp = {2020.03.24},
-}
-
-@InProceedings{Cer2018b,
-  author    = {Cer, D. and Yang, Y. and Kong, S.-Y. and Hua, N. and Limtiaco, N. and St. John, R. and Constant, N. and Guajardo-Cespedes, M. and Yuan, S. and Tar, C. and Strope, B. and Kurzweil, R.},
-  title     = {Universal Sentence Encoder for English},
   booktitle = {Conference on Empirical Methods in Natural Language Processing},
   year      = {2018},
   pages     = {169-174},
   doi       = {10.18653/v1/d18-2029},
   owner     = {Vincent},
-  timestamp = {2023.08.11},
+  timestamp = {2020.03.24},
 }
 
 @Article{Cermakova2020,
@@ -10191,19 +10211,6 @@
   doi       = {10.1093/llc/fqaa051},
   owner     = {Vincent},
   timestamp = {2023.09.26},
-}
-
-@Article{Cermakova2020a,
-  author    = {Čermáková, A. and Mahlberg, M.},
-  title     = {Gender inequality and female body language in children's literature},
-  journal   = {Digital Scholarship in the Humanities},
-  year      = {2020},
-  volume    = {36},
-  number    = {Supplement_2},
-  pages     = {ii72-ii77},
-  doi       = {10.1093/llc/fqaa051},
-  owner     = {Vincent},
-  timestamp = {2024.04.20},
 }
 
 @Article{Chaddha2011,
@@ -14273,18 +14280,6 @@
   doi       = {10.21428/93b7ef64.ec022085},
   owner     = {Vincent},
   timestamp = {2023.07.19},
-}
-
-@InProceedings{DegliEsposti2023a,
-  author    = {Degli Esposti, M. and Pescatore, G.},
-  title     = {Exploring TV Seriality and Television Studies through Data-Driven Approaches},
-  booktitle = {13th Media Mutations International Conference},
-  year      = {2023},
-  pages     = {23-40},
-  chapter   = {2},
-  doi       = {10.21428/93b7ef64.ec022085},
-  owner     = {Vincent},
-  timestamp = {2024.03.24},
 }
 
 @TechReport{DeGottardi2007,
@@ -24362,24 +24357,14 @@
   timestamp = {2019.04.13},
 }
 
-@Book{Han2011,
-  title     = {Data Mining: Concepts and Techniques},
-  publisher = {Elsevier},
-  year      = {2011},
-  author    = {Han, J. and Kamber, M. and Pei, J.},
-  doi       = {10.1016/C2009-0-61819-5},
-  owner     = {Vincent},
-  timestamp = {2019.04.11},
-}
-
 @Book{Han2012,
   title     = {Data Mining: Concepts and Techniques},
   publisher = {Elsevier},
   year      = {2012},
   author    = {Han, J. and Kamber, M. and Pei, J.},
-  doi       = {10.1016/c2009-0-61819-5},
+  doi       = {10.1016/C2009-0-61819-5},
   owner     = {Vincent},
-  timestamp = {2023.08.13},
+  timestamp = {2019.04.11},
 }
 
 @PhdThesis{Han2014,
@@ -29811,18 +29796,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.15},
 }
 
-@Article{Kagan2020,
-  author    = {Kagan, D. and Chesney, T. and Fire, M.},
-  title     = {Using data science to understand the film industry's gender gap},
-  journal   = {Palgrave Communications},
-  year      = {2020},
-  volume    = {6},
-  pages     = {92},
-  doi       = {10.1057/s41599-020-0436-1},
-  owner     = {Vincent},
-  timestamp = {2023.11.25},
-}
-
 @Article{Kahan1997,
   author    = {Kahan, T. L. and LaBerge, S. and Levitan, L. and Zimbardo, P.},
   title     = {Similarities and Differences between Dreaming and Waking Cognition: An Exploratory Study},
@@ -32818,19 +32791,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1093/llc/fqab012},
   owner     = {Vincent},
   timestamp = {2021.03.27},
-}
-
-@Article{Kubis2021a,
-  author    = {Kubis, M.},
-  title     = {Quantitative analysis of character networks in Polish 19th- and 20th-century novels},
-  journal   = {Digital Scholarship in the Humanities},
-  year      = {2021},
-  volume    = {36},
-  number    = {Supplement\_2},
-  pages     = {ii175-ii181},
-  doi       = {10.1093/llc/fqab012},
-  owner     = {Vincent},
-  timestamp = {2023.03.17},
 }
 
 @Article{Kuchaiev2011,
@@ -38059,18 +38019,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2022.08.30},
 }
 
-@Article{MacCarron2016b,
-  author    = {Mac Carron, P. and Kaski, K. and Dunbar, R.},
-  title     = {Calling Dunbar's numbers},
-  journal   = {Social Networks},
-  year      = {2016},
-  volume    = {47},
-  pages     = {151-155},
-  doi       = {10.1016/j.socnet.2016.06.003},
-  owner     = {Vincent},
-  timestamp = {2022.08.30},
-}
-
 @Article{MacCarron2020,
   author    = {Mac Carron, P. and Maher, P. J. and Fennell, S. and Burke, K. and Gleeson, J. P. and Durrheim, K. and Quayle, M.},
   title     = {Agreement threshold on Axelrod's model of cultural dissemination},
@@ -41210,6 +41158,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2023.03.13},
   url       = {https://www.researchgate.net/publication/369182021_Milorad_Pavic's_Dictionary_of_the_Khazars_from_the_perspective_of_network_theory},
+}
+
+@TechReport{Milosavljevic2023,
+  author      = {Milosavljević, S.},
+  title       = {A computational Social Network Analysis of the Dictionary of the Khazars by Milorad Pavić},
+  institution = {University of Graz},
+  year        = {2023},
+  owner       = {Vincent},
+  timestamp   = {2023.10.26},
+  url         = {researchgate.net/profile/Stefan-Milosavljevic-3/publication/374808998},
 }
 
 @Article{Milroy1985,
@@ -46034,7 +45992,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.08.12},
 }
 
-@InProceedings{Park2022,
+@InProceedings{Park2022c,
   author    = {Park, M. and Park, S. and Shin, H.},
   title     = {Literature Representation using Character Networks based on Sentiment Analysis},
   booktitle = {IEEE International Conference on Big Data and Smart Computing},
@@ -48194,6 +48152,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Article{Qaiser2018,
+  author    = {Qaiser, S. and Ali, R.},
+  title     = {Text Mining: Use of TF-IDF to Examine the Relevance of Words to Documents},
+  journal   = {International Journal of Computer Applications},
+  year      = {2018},
+  volume    = {181},
+  number    = {1},
+  pages     = {25–29},
+  doi       = {10.5120/ijca2018917395},
+  owner     = {Vincent},
+  timestamp = {2024.04.27},
+}
+
 @InProceedings{Qi2020,
   author    = {Qi, P. and Zhang, Y. and Zhang, Y. and Bolton, J. and Manning, C. D.},
   title     = {Stanza: A Python Natural Language Processing Toolkit for Many Human Languages},
@@ -49433,17 +49404,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/d19-1410},
   owner     = {Vincent},
   timestamp = {2020.12.15},
-}
-
-@InProceedings{Reimers2019a,
-  author    = {Reimers, N. and Gurevych, I.},
-  title     = {Sentence-{BERT}: Sentence Embeddings using Siamese {BERT}-Networks},
-  booktitle = {Conference on Empirical Methods in Natural Language Processing / 9th International Joint Conference on Natural Language Processing},
-  year      = {2019},
-  pages     = {3973-3983},
-  doi       = {10.18653/v1/d19-1410},
-  owner     = {Vincent},
-  timestamp = {2023.04.15},
 }
 
 @Article{Reis2011,
@@ -52525,16 +52485,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=vkonAAAAMAAJ},
 }
 
-@Book{Scherer1968,
-  title     = {La Dramaturgie classique en France},
-  publisher = {Nizet},
-  year      = {1968},
-  author    = {Scherer, J.},
-  owner     = {Vincent},
-  timestamp = {2024.01.01},
-  url       = {https://books.google.fr/books/?id=4W13oAEACAAJ},
-}
-
 @Article{Scheuerman2019,
   author    = {Scheuerman, M. K. and Paul, J. M. and Brubaker, J. R.},
   title     = {How Computers See Gender: An Evaluation of Gender Classification in Commercial Facial Analysis Services},
@@ -52861,16 +52811,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Schmidt2022a,
-  author    = {Schmidt, H. and Tran, S. and Medaglia, J. D. and Ulichney, V. and Helion, C.},
-  title     = {Conversational linguistic features predict social network learning},
-  journal   = {PsyArXiv},
-  year      = {2022},
-  owner     = {Vincent},
-  timestamp = {2023.08.12},
-  url       = {https://psyarxiv.com/fn4my/},
-}
-
-@Article{Schmidt2022b,
   author    = {Schmidt, H. and Tran, S. and Medaglia, J. D. and Ulichney, V. and Helion, C.},
   title     = {Conversational linguistic features predict social network learning},
   journal   = {PsyArXiv},
@@ -58927,6 +58867,20 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.04.09},
 }
 
+@Article{Traag2009,
+  author    = {Traag, V. A. and Bruggeman, J.},
+  title     = {Community detection in networks with positive and negative links},
+  journal   = {Physical Review E},
+  year      = {2009},
+  volume    = {80},
+  number    = {3},
+  pages     = {036115},
+  doi       = {10.1103/PhysRevE.80.036115},
+  owner     = {Vincent},
+  review    = {arXiv url: https://arxiv.org/abs/0811.2329},
+  timestamp = {2010.12.06},
+}
+
 @Article{Traag2015,
   author    = {Traag, V. A. and Reinanda, R. and van Klinken, G.},
   title     = {Elite Co-Occurrence in the Media},
@@ -59162,16 +59116,6 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1145/3155133.3155206},
   owner     = {Vincent},
   timestamp = {2020.12.15},
-}
-
-@InProceedings{Trieu2017a,
-  author    = {Trieu, L. Q. and Tran, H. Q. and Tran, M.-T.},
-  title     = {News Classification from Social Media Using Twitter-based Doc2Vec Model and Automatic Query Expansion},
-  booktitle = {8th International Symposium on Information and Communication Technology},
-  year      = {2017},
-  doi       = {10.1145/3155133.3155206},
-  owner     = {Vincent},
-  timestamp = {2023.04.15},
 }
 
 @Article{Trieu2019,
