--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1328,6 +1328,19 @@
   url       = {https://hippokratia.gr/images/PDF/14Sup1/734.pdf},
 }
 
+@Article{Aley2020,
+  author    = {Aley, M. and Hahn, L.},
+  title     = {The Powerful Male Hero: A Content Analysis of Gender Representation in Posters for Children's Animated Movies},
+  journal   = {Sex Roles},
+  year      = {2020},
+  volume    = {83},
+  number    = {7–8},
+  pages     = {499–509},
+  doi       = {10.1007/s11199-020-01127-z},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
+}
+
 @Article{Algee-Hewitt2017,
   author    = {Algee-Hewitt, M.},
   title     = {Distributed Character: Quantitative Models of the English Stage, 1550-1900},
@@ -2772,6 +2785,16 @@
   owner     = {Vincent},
   timestamp = {2024.04.22},
   url       = {auai.org/uai2015/proceedings/papers/249.pdf},
+}
+
+@Book{Attwood1993,
+  title     = {Red Women on the Silver Screen},
+  publisher = {Pandora Press},
+  year      = {1993},
+  author    = {Attwood, L.},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
+  url       = {https://books.google.fr/books/?id=wYFZAAAAMAAJ},
 }
 
 @Article{AtwellSeate2015,
@@ -5197,6 +5220,17 @@
   owner     = {Vincent},
   timestamp = {2022.11.15},
   url       = {https://www.jstor.org/stable/2745610},
+}
+
+@TechReport{Berezin2018,
+  author      = {Berezin, O. and Kuzmichev, P. and Leontyeva, X.},
+  title       = {Key Trends in Russian Cinema},
+  institution = {European Audiovisual Observatory},
+  year        = {2018},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2024.05.11},
+  url         = {https://rm.coe.int/ru-2018-key-trends-of-russian-cinema/16808d7212.},
 }
 
 @Article{Berezkin2010,
@@ -14196,6 +14230,17 @@
   timestamp = {2023.08.11},
 }
 
+@TechReport{Dean2008,
+  author      = {Dean, D.},
+  title       = {Age, Gender and Performer Employment in Europe},
+  institution = {Warwick Business School, University of Warwick},
+  year        = {2008},
+  type        = {Research Report},
+  owner       = {Vincent},
+  timestamp   = {2024.05.11},
+  url         = {https://warwick.ac.uk/fac/soc/wbs/research/irru/publications/recent_research_reports/fia_ec_survey_report_dd.pdf},
+}
+
 @InCollection{Debnar2005,
   author    = {Debnar, P.},
   title     = {Fifth-Century Athenian History and Tragedy},
@@ -19514,6 +19559,16 @@
   timestamp = {2020.08.21},
 }
 
+@TechReport{Fontaine2022,
+  author      = {Fontaine, G.},
+  title       = {Female Audiovisual Professionals in European TV Fiction Production},
+  institution = {European Audiovisual Observatory},
+  year        = {2022},
+  owner       = {Vincent},
+  timestamp   = {2024.05.11},
+  url         = {https://rm.coe.int/female-audiovisual-professionals-in-european-tv-fiction-production-202/1680a626dc},
+}
+
 @Article{FontouraCosta2004a,
   author    = {da Fontoura Costa, L.},
   title     = {L-percolations of complex networks},
@@ -20946,12 +21001,14 @@
 
 @InProceedings{Garcia2014,
   author    = {Garcia, D. and Weber, I. and Garimella, V. R. K.},
-  title     = {Gender asymmetries in reality and fiction: the Bechdel test of social media 131-140},
+  title     = {Gender asymmetries in reality and fiction: the Bechdel test of social media},
   booktitle = {8th AAAI International Conference on Weblogs and Social Media},
   year      = {2014},
+  volume    = {8},
+  pages     = {131-140},
+  doi       = {10.1609/icwsm.v8i1.14522},
   owner     = {Vincent},
   timestamp = {2021.12.27},
-  url       = {https://www.aaai.org/ocs/index.php/ICWSM/ICWSM14/paper/view/8070},
 }
 
 @InProceedings{Garcia2020,
@@ -25793,6 +25850,19 @@
   url       = {https://press.princeton.edu/titles/7175.html},
 }
 
+@InCollection{HetheringtonRaveney2018,
+  author    = {Hetherington Raveney, F. and Moldaschl, B. and Koblitz, A.},
+  title     = {Gender Inequality for Directors in the European Film Industry: Focus on Austria},
+  booktitle = {Handbook of State Aid for Film},
+  publisher = {Springer},
+  year      = {2018},
+  series    = {Media Business and Innovation},
+  pages     = {509-530},
+  doi       = {10.1007/978-3-319-71716-6_28},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
+}
+
 @InProceedings{Hettinger2015,
   author    = {Hettinger, L. and Becker, M. and Reger, I. and Jannidis, F. and Hotho, A.},
   title     = {Genre Classification on German Novels},
@@ -29251,6 +29321,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.psupress.org/books/titles/0-271-00809-1.html},
 }
 
+@InCollection{Johnston1999,
+  author    = {Johnston, C.},
+  title     = {Women's Cinema as Counter-Cinema},
+  booktitle = {Feminist Film Theory},
+  publisher = {Edinburgh University Press},
+  year      = {1999},
+  chapter   = {3},
+  pages     = {31-40},
+  doi       = {10.1515/9781474473224-005},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
+}
+
 @Article{Jolly2018,
   author    = {Jolly, E.},
   title     = {Pymer4: Connecting {R} and {Python} for Linear Mixed Modeling},
@@ -30051,6 +30134,39 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.02},
 }
 
+@TechReport{Kanzler2018,
+  author      = {Kanzler, M. and Simone, P. and Talavera Milla, J.},
+  title       = {Focus 2018. World Film Market Trends},
+  institution = {European Audiovisual Observatory},
+  year        = {2018},
+  type        = {Technical Report},
+  doi         = {10.1016/j.fos.2018.11.030},
+  owner       = {Vincent},
+  timestamp   = {2024.05.11},
+}
+
+@TechReport{Kanzler2020,
+  author      = {Kanzler, M. and Simone, P.},
+  title       = {Focus 2020. World Film Market Trends},
+  institution = {European Audiovisual Observatory},
+  year        = {2020},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2024.05.11},
+  url         = {https://rm.coe.int/focus2020/1680a32252},
+}
+
+@TechReport{Kanzler2022,
+  author      = {Kanzler, M. and Simone, P.},
+  title       = {Focus 2022. World Film Market Trends},
+  institution = {European Audiovisual Observatory},
+  year        = {2022},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2024.05.11},
+  url         = {https://rm.coe.int/focus2022/1680ab25e7},
+}
+
 @InProceedings{Kapadia2015,
   author    = {Kapadia, M. and Falk, J. and Zünd, F. and Marti, M. and Sumner, R. W. and Gross, M.},
   title     = {Computer-assisted authoring of interactive narratives},
@@ -30091,6 +30207,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2020.07.20},
   url       = {https://books.google.fr/books?id=398G7nV_-_AC},
+}
+
+@Article{Kapoor2015,
+  author    = {Kapoor, H. and Bhuptani, P. H. and Agneswaran, A.},
+  title     = {The Bechdel in India: gendered depictions in contemporary Hindi cinema},
+  journal   = {Journal of Gender Studies},
+  year      = {2015},
+  volume    = {26},
+  number    = {2},
+  pages     = {212–226},
+  doi       = {10.1080/09589236.2015.1102128},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
 }
 
 @InProceedings{Karamanis2004,
@@ -34985,6 +35114,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.12.02},
 }
 
+@Article{Leontyeva2024,
+  author    = {Leontyeva, X. and Koltsova, O. and Verhoeven, D.},
+  title     = {Gender (im)balance in the Russian cinema: on the screen and behind the camera},
+  journal   = {Journal of Cultural Analytics},
+  year      = {2024},
+  volume    = {9},
+  number    = {1},
+  pages     = {4},
+  doi       = {10.22148/001c.116142},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
+}
+
 @InProceedings{Leordeanu2005,
   author    = {Leordeanu, M. and Hebert, M.},
   title     = {A spectral technique for correspondence problems using pairwise constraints},
@@ -36215,6 +36357,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2010.10.11},
 }
 
+@Book{Liddy2020,
+  title     = {Women in the International Film Industry: Policy, Practice and Power},
+  publisher = {Springer},
+  year      = {2020},
+  author    = {Liddy, S.},
+  doi       = {10.1007/978-3-030-39070-9},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
+}
+
 @Article{Lieberman1969,
   author    = {Lieberman, A. B.},
   title     = {The Well-Made Play and the Theatre of the Absurd: A Study in Attitude Change},
@@ -36497,6 +36649,31 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=x4YOMQAACAAJ},
 }
 
+@Article{Lindner2015,
+  author    = {Lindner, A. M. and Lindquist, M. and Arnold, J.},
+  title     = {Million Dollar Maybe? The Effect of Female Presence in Movies on Box Office Returns},
+  journal   = {Sociological Inquiry},
+  year      = {2015},
+  volume    = {85},
+  number    = {3},
+  pages     = {407-428},
+  doi       = {10.1111/soin.12081},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
+}
+
+@Article{Lindner2017,
+  author    = {Lindner, A. M. and Schulting, Z.},
+  title     = {How Movies with a Female Presence Fare with Critics},
+  journal   = {Socius},
+  year      = {2017},
+  volume    = {3},
+  pages     = {237802311772763},
+  doi       = {10.1177/2378023117727636},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
+}
+
 @Article{Lingam2019,
   author    = {Lingam, G. and Rout, R. R. and Somayajulu, D. V. L. N.},
   title     = {Adaptive deep Q-learning model for detecting social bots and influential users in online social networks},
@@ -36508,6 +36685,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1007/s10489-019-01488-3},
   owner     = {Vincent},
   timestamp = {2021.09.19},
+}
+
+@Article{Linke2021,
+  author    = {Linke, C. and Prommer, E.},
+  title     = {From fade-out into spotlight: An audio-visual character analysis (ACIS) on the diversity of media representation and production culture},
+  journal   = {Studies in Communication Sciences},
+  year      = {2021},
+  volume    = {21},
+  number    = {1},
+  pages     = {1-17},
+  doi       = {10.24434/j.scoms.2021.01.010},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
 }
 
 @Article{Liou2000,
@@ -48176,6 +48366,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.11.30},
 }
 
+@InProceedings{Qi2024,
+  author    = {Qi, J. and Gui, B. and Liang, X. and Gao, J.},
+  title     = {Research on Hidden Parenthood Relationship of Figures in Long-text Kung Fu Novels},
+  booktitle = {4th International Conference on New Computational Social Science},
+  year      = {2024},
+  series    = {Advances in Social Science, Education and Humanities Research},
+  pages     = {48-65},
+  publisher = {Atlantis Press},
+  doi       = {10.2991/978-2-38476-230-9_7},
+  owner     = {Vincent},
+  timestamp = {2024.04.30},
+}
+
 @Article{Qian2023,
   author    = {Qian, C. and Cong, X. and Liu, W. and Yang, C. and Chen, W. and Su, Y. and Dang, Y. and Li, J. and Xu, J. and Li, D. and Liu, Z. and Sun, M.},
   title     = {Communicative Agents for Software Development},
@@ -54805,6 +55008,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.proquest.com/docview/1303452174},
 }
 
+@TechReport{Simone2021,
+  author      = {Simone, P.},
+  title       = {Female Professionals in European Film Production},
+  institution = {European Audiovisual Observatory},
+  year        = {2021},
+  type        = {Technical Report},
+  owner       = {Vincent},
+  timestamp   = {2024.05.11},
+  url         = {https://rm.coe.int/female-professionals-in-european-film-production-2023-edition-p-simone/1680acfdcb},
+}
+
 @Article{Simons2008,
   author    = {Simons, J.},
   title     = {Complex narratives},
@@ -55204,6 +55418,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.03.31},
   url       = {https://www.adamsmith.org/the-theory-of-moral-sentiments},
+}
+
+@TechReport{Smith2009a,
+  author      = {Smith, S. L. and Choueiti, M.},
+  title       = {Gender Disparity On Screen and Behind the Camera in Family Films: An Executive Summary},
+  institution = {University of Southern California, Annenberg School for Communication \& Journalism},
+  year        = {2009},
+  owner       = {Vincent},
+  timestamp   = {2024.05.11},
+  url         = {https://annenberg.usc.edu/sites/default/files/2015/04/28/Gender%20Disparity%20On%20Screen%20and%20Behind%20the%20Camera%20in%20Family%20Films-%20An%20Executive%20Summary%20key%20findings.pdf},
 }
 
 @TechReport{Smith2010,
@@ -59082,6 +59306,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2012.03.27},
 }
 
+@Article{Treme2018,
+  author    = {Treme, J. and Craig, L. A. and Copland, A.},
+  title     = {Gender and box office performance},
+  journal   = {Applied Economics Letters},
+  year      = {2018},
+  volume    = {26},
+  number    = {9},
+  pages     = {781-785},
+  doi       = {10.1080/13504851.2018.1495818},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
+}
+
 @InCollection{Trepte2006,
   author    = {Trepte, S.},
   title     = {Social identity theory},
@@ -60278,6 +60515,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/2577741},
   owner     = {Vincent},
   timestamp = {2021.06.24},
+}
+
+@Article{Verhoeven2019,
+  author    = {Verhoeven, D. and Coate, B. and Zemaityte, V.},
+  title     = {Re-Distributing Gender in the Global Film Industry: Beyond \#{MeToo} and \#{MeThree}},
+  journal   = {Media Industries Journal},
+  year      = {2019},
+  volume    = {6},
+  number    = {1},
+  doi       = {10.3998/mij.15031809.0006.108},
+  owner     = {Vincent},
+  timestamp = {2024.05.11},
 }
 
 @TechReport{Verma2003,
@@ -61512,7 +61761,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 
 @Article{Wang2022n,
   author    = {Wang, Z. and Huang, J.},
-  title     = {Research on Characterization and Shaping of Chinese Heroic Characters in Online Media Based on Deep Neural Network Evaluation},
+  title     = {[Retracted] Research on Characterization and Shaping of Chinese Heroic Characters in Online Media Based on Deep Neural Network Evaluation},
   journal   = {Wireless Communications and Mobile Computing},
   year      = {2022},
   volume    = {2022},
