added Silva2024a + fixed software bug

--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -1334,8 +1334,8 @@
   journal   = {Sex Roles},
   year      = {2020},
   volume    = {83},
-  number    = {7–8},
-  pages     = {499–509},
+  number    = {7-8},
+  pages     = {499-509},
   doi       = {10.1007/s11199-020-01127-z},
   owner     = {Vincent},
   timestamp = {2024.05.11},
@@ -5895,6 +5895,20 @@
   url       = {https://benjamins.com/catalog/scl.28},
 }
 
+@InProceedings{Bick2006,
+  author    = {Bick, E.},
+  title     = {Functional Aspects in Portuguese NER},
+  booktitle = {7th International Workshop on Computational Processing of the Portuguese Language},
+  year      = {2006},
+  volume    = {3960},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {80-89},
+  publisher = {Springer},
+  doi       = {10.1007/11751984_9},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @InCollection{Bick2014,
   author    = {Bick, E.},
   title     = {{PALAVRAS}, a constraint grammar-based parsing system for Portuguese},
@@ -6064,6 +6078,20 @@
   doi       = {10.1093/acprof:oso/9780199272617.001.0001},
   owner     = {Vincent},
   timestamp = {2023.11.25},
+}
+
+@InProceedings{Bimantara2023,
+  author    = {Bimantara, I. M. S. and Sanjaya E. R., N. A. and Purwitasari, D.},
+  title     = {Character Entity Recognition Using Hybrid Binary-Particle Swarm Optimization and Conditional Random Field on Balinese Folklore Text},
+  booktitle = {25th International Conference on Information Integration and Web Intelligence},
+  year      = {2023},
+  volume    = {14416},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {128-133},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-031-48316-5_15},
+  owner     = {Vincent},
+  timestamp = {2024.05.31},
 }
 
 @InProceedings{Bingenheimer2009,
@@ -9302,7 +9330,7 @@
   year      = {2021},
   volume    = {10},
   number    = {5},
-  pages     = {2780–2788},
+  pages     = {2780-2788},
   doi       = {10.11591/eei.v10i5.3157},
   owner     = {Vincent},
   timestamp = {2024.04.27},
@@ -18294,6 +18322,20 @@
   timestamp = {2018.06.12},
 }
 
+@InBook{Falk2024a,
+  chapter   = {5},
+  pages     = {183-228},
+  title     = {Drama: Inner Seas in the Tragedies of Baillie and Harpur},
+  publisher = {Springer},
+  year      = {2024},
+  author    = {Falk, M.},
+  series    = {Palgrave Studies in the Enlightenment, Romanticism and Cultures of Print},
+  booktitle = {Romanticism and the Contingent Self: The Challenge of Representation},
+  doi       = {10.1007/978-3-031-49959-3_5},
+  owner     = {Vincent},
+  timestamp = {2024.05.26},
+}
+
 @Article{Falzon2018,
   author    = {Falzon, L. and Quintane, E. and Dunn, J. and Robins, G.},
   title     = {Embedding time in positions: Temporal measures of centrality for social network analysis},
@@ -20273,6 +20315,16 @@
   timestamp = {2019.04.05},
 }
 
+@InProceedings{Frontini2020,
+  author    = {Frontini, F. and Brando, C. and Byszuk, J. and Galleron, I. and Santos, D. and Stanković, R.},
+  title     = {Named Entity Recognition for Distant Reading in ELTeC},
+  booktitle = {CLARIN Annual Conference},
+  year      = {2020},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://hal.science/hal-03160438},
+}
+
 @Article{FronzettiColladon2017,
   author    = {Fronzetti Colladon, A. and Vagaggini, F.},
   title     = {Robustness and stability of enterprise intranet social networks: The impact of moderators},
@@ -21548,6 +21600,17 @@
   doi       = {10.1073/pnas.2006465117},
   owner     = {Vincent},
   timestamp = {2020.11.07},
+}
+
+@InProceedings{Ghaddar2017,
+  author    = {Ghaddar, A. and Langlais, P.},
+  title     = {Winer: A wikipedia annotated corpus for named entity recognition},
+  booktitle = {8th International Joint Conference on Natural Language Processing},
+  year      = {2017},
+  pages     = {413-422},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://aclanthology.org/I17-1042/},
 }
 
 @InProceedings{Ghai2021,
@@ -25154,7 +25217,7 @@
   year      = {2006},
   volume    = {15},
   number    = {3},
-  pages     = {572–581},
+  pages     = {572-581},
   doi       = {10.1109/tip.2005.863039},
   owner     = {Vincent},
   timestamp = {2024.04.27},
@@ -30216,7 +30279,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2015},
   volume    = {26},
   number    = {2},
-  pages     = {212–226},
+  pages     = {212-226},
   doi       = {10.1080/09589236.2015.1102128},
   owner     = {Vincent},
   timestamp = {2024.05.11},
@@ -33722,6 +33785,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.03.17},
 }
 
+@InProceedings{Lamproudis2022,
+  author    = {Lamproudis, A. and Henriksson, A. and Dalianis, H.},
+  title     = {Evaluating pretraining strategies for clinical BERT models},
+  booktitle = {13th Language Resources and Evaluation Conference},
+  year      = {2022},
+  pages     = {410-416},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://aclanthology.org/2022.lrec-1.43/},
+}
+
 @Book{Lancaster1979,
   title     = {The Korean Buddhist Canon: A Descriptive Catalogue},
   publisher = {Berkeley University Press},
@@ -35294,7 +35368,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2007},
   volume    = {378},
   number    = {2},
-  pages     = {591–602},
+  pages     = {591-602},
   doi       = {10.1016/j.physa.2006.12.022},
   owner     = {Vincent},
   timestamp = {2024.04.27},
@@ -37130,7 +37204,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2023},
   volume    = {5},
   number    = {12},
-  pages     = {1447–1457},
+  pages     = {1447-1457},
   doi       = {10.1038/s42256-023-00759-6},
   owner     = {Vincent},
   timestamp = {2024.04.27},
@@ -42413,6 +42487,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://newleftreview.org/issues/ii124/articles/franco-moretti-the-roads-to-rome},
 }
 
+@InProceedings{Morgado2022,
+  author    = {Morgado, I. and Moreno-Jiménez, L.-G. and Torres-Moreno, J.-M. and Wedemann, Roseli},
+  title     = {{MegaLitePT}: A Corpus of Literature in Portuguese for NLP},
+  booktitle = {11th Brazilian Conference on Intelligent Systems},
+  year      = {2022},
+  volume    = {13654},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {251-265},
+  doi       = {10.1007/978-3-031-21689-3_19},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @Article{Morgan1962,
   author    = {Morgan, J.},
   title     = {The Anatomy of Income Distribution},
@@ -45963,6 +46050,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://www.maajournal.com/Issues/2012/pdf/PAPAMARINOPOULOS.pdf},
 }
 
+@InProceedings{Papay2020,
+  author    = {Papay, S. and Padó, S.},
+  title     = {{RiQuA}: A corpus of rich quotation annotation for {E}nglish literary text},
+  booktitle = {12th Language Resources and Evaluation Conference},
+  year      = {2020},
+  pages     = {835-841},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://aclanthology.org/2020.lrec-1.104/},
+}
+
 @Article{Papegnies2019,
   author    = {Papégnies, É. and Labatut, V. and Dufour, R. and Linarès, G.},
   title     = {Conversational Networks for Automatic Online Moderation},
@@ -47753,6 +47851,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://www.goodreads.com/book/show/37926949-the-fairy-tale-book},
 }
 
+@MastersThesis{Pop2024,
+  author      = {Pop, P. A.},
+  title       = {Network Analysis of Characters in Portuguese Literature},
+  year        = {2024},
+  type        = {MSc Thesis},
+  institution = {Universidade Nova de Lisboa},
+  owner       = {Vincent},
+  timestamp   = {2024.05.16},
+  url         = {https://run.unl.pt/bitstream/10362/167080/1/TCDMAA2105.pdf},
+}
+
 @InProceedings{Pope2016,
   author    = {Pope, F. and Shirvani, R. A. and Rwebangira, Mugizi R. and Chouikha, M. and Taylor, A. and Alarcon Ramirez, A. and Torfi, A.},
   title     = {Automatic Detection of Small Groups of Persons, Influential Members, Relations and Hierarchy in Written Conversations Using Fuzzy Logic},
@@ -48349,7 +48458,7 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   year      = {2018},
   volume    = {181},
   number    = {1},
-  pages     = {25–29},
+  pages     = {25-29},
   doi       = {10.5120/ijca2018917395},
   owner     = {Vincent},
   timestamp = {2024.04.27},
@@ -54855,6 +54964,28 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2024.01.11},
 }
 
+@InProceedings{Silva2024a,
+  author    = {Silva, M. O. and Moro, M. M.},
+  title     = {PPORTAL\_ner: An Annotated Corpus of Portuguese Literary Entities},
+  booktitle = {Joint International Conference on Computational Linguistics, Language Resources and Evaluation},
+  year      = {2024},
+  pages     = {12927-12937},
+  owner     = {Vincent},
+  timestamp = {2024.05.20},
+  url       = {https://aclanthology.org/2024.lrec-main.1132/},
+}
+
+@InProceedings{Silva2024b,
+  author    = {Silva, M. O. and Moro, M. M.},
+  title     = {Evaluating pre-training strategies for literary named entity recognition in {P}ortuguese},
+  booktitle = {16th International Conference on Computational Processing of Portuguese},
+  year      = {2024},
+  pages     = {384-393},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://aclanthology.org/2024.propor-1.39/},
+}
+
 @Article{SilvaDias2013,
   author    = {Silva Dias, E. and Castonguay, D. and Longo, H. and Rfaei Jradi, W. A.},
   title     = {Efficient Enumeration of Chordless Cycles},
@@ -55088,6 +55219,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1016/j.scitotenv.2012.03.076},
   owner     = {Vincent},
   timestamp = {2020.03.13},
+}
+
+@Article{Singhal2023,
+  author    = {Singhal, P. and Walambe, R. and Ramanna, S. and Kotecha, K.},
+  title     = {Domain Adaptation: Challenges, Methods, Datasets, and Applications},
+  journal   = {IEEE Access},
+  year      = {2023},
+  volume    = {11},
+  pages     = {6973–7020},
+  doi       = {10.1109/access.2023.3237025},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
 }
 
 @Book{Sinnott-Armstrong1988,
@@ -55912,6 +56055,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp    = {2018.05.12},
 }
 
+@Article{Souza2019,
+  author    = {Souza, F. and Nogueira, R. and Lotufo, R.},
+  title     = {Portuguese Named Entity Recognition using BERT-CRF},
+  journal   = {arXiv},
+  year      = {2019},
+  volume    = {cs.CL},
+  pages     = {1909.10649},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://arxiv.org/abs/1909.10649},
+}
+
+@InProceedings{Souza2020,
+  author    = {Souza, F. and Nogueira, R. and Lotufo, R.},
+  title     = {{BERTimbau}: Pretrained {BERT} Models for {B}razilian {P}ortuguese},
+  booktitle = {9th Brazilian Conference on Intelligent Systems},
+  year      = {2020},
+  volume    = {12319},
+  series    = {Lecture Notes in Computer Science},
+  pages     = {403-417},
+  publisher = {Springer},
+  doi       = {10.1007/978-3-030-61377-8_28},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+}
+
 @InCollection{Sowa1987,
   author    = {Sowa, J. F.},
   title     = {Semantic Networks},
@@ -56539,6 +56708,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://dl.acm.org/citation.cfm?id=2380942},
 }
 
+@MastersThesis{Stepakoff2020,
+  author      = {Stepakoff, T. F.},
+  title       = {A Networking Odyssey: The Study of Character Relationships using Distant Reading and Sentiment Analysis in {H}omer's {O}dyssey},
+  year        = {2020},
+  type        = {MPhil},
+  institution = {Trinity College Dublin},
+  owner       = {Vincent},
+  timestamp   = {2024.05.14},
+  url         = {https://english.ua.edu/graduate-student/tess-stepakoff/},
+}
+
 @InProceedings{Stepanova2016,
   author    = {Stepanova, M. and Budnikov, E. and Chelombeeva, A. and Matavina, P. and Skorinkin, D.},
   title     = {Information Extraction Based on Deep Syntactic-Semantic Analysis},
@@ -57000,6 +57180,29 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1353/esp.2023.a906709},
   owner     = {Vincent},
   timestamp = {2023.09.16},
+}
+
+@InProceedings{Stymne2020,
+  author    = {Stymne, S. and Östman, C.},
+  title     = {Slända: An annotated corpus of narrative and dialogue in {S}wedish literary fiction},
+  booktitle = {12th Language Resources and Evaluation Conference},
+  year      = {2020},
+  pages     = {826-834},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://aclanthology.org/2020.lrec-1.103/},
+}
+
+@InProceedings{Stymne2022,
+  author    = {Stymne, S. and Östman, C.},
+  title     = {{SLäNDa} version 2.0: Improved and extended annotation of narrative and dialogue in {S}wedish literature},
+  booktitle = {13th Language Resources and Evaluation Conference},
+  year      = {2022},
+  pages     = {5324-5333},
+  groups    = {_Corpus (Dialogs), _Literary (Dialogs)},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://aclanthology.org/2022.lrec-1.570/},
 }
 
 @Article{Su2009,
@@ -63987,6 +64190,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2024.01.02},
 }
 
+@Article{Yamada2024,
+  author    = {Yamada, M. and Murai, Y. and Kumagai, I.},
+  title     = {Digital detection of play characters' relationships in Shakespeare's plays: extended cross-correlation analysis of the character appearance frequencies},
+  journal   = {International Journal on Digital Libraries},
+  year      = {2024},
+  volume    = {in press},
+  doi       = {10.1007/s00799-024-00401-9},
+  owner     = {Vincent},
+  timestamp = {2024.05.29},
+}
+
 @TechReport{Yanagawa2007,
   author      = {Yanagawa, A. and Chang, S.-F. and Kennedy, L. and Hsu, W.},
   title       = {Columbia university's baseline detectors for 374 lscom semantic visual concepts},
@@ -66016,6 +66230,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2023.03.17},
 }
 
+@InProceedings{Zhong2024,
+  author    = {Zhong, W. and Naradowsky, J. and Takamura, H. and Kobayashi, I. and Miyao, Y.},
+  title     = {Who Said What: Formalization and Benchmarks for the Task of Quote Attribution},
+  booktitle = {Joint International Conference on Computational Linguistics, Language Resources and Evaluation},
+  year      = {2024},
+  pages     = {17588-17602},
+  owner     = {Vincent},
+  timestamp = {2024.05.20},
+  url       = {https://aclanthology.org/2024.lrec-main.1530/},
+}
+
 @Article{Zhou2003a,
   author    = {Zhou, H.},
   title     = {Network landscape from a Brownian particle's perspective},
@@ -66356,6 +66581,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2023.findings-emnlp.677},
   owner     = {Vincent},
   timestamp = {2024.04.24},
+}
+
+@InProceedings{Zilio2022,
+  author    = {Zilio, L. and Finatto, M. J. and Vieira, R.},
+  title     = {Named entity recognition applied to portuguese texts from the {XVIII} century},
+  booktitle = {2nd Workshop on Digital Humanities and Natural Language Processing},
+  year      = {2022},
+  volume    = {3128},
+  series    = {CEUR Workshop Proceedings},
+  pages     = {1-10},
+  owner     = {Vincent},
+  timestamp = {2024.06.01},
+  url       = {https://ceur-ws.org/Vol-3128/paper10.pdf},
 }
 
 @Article{Zillman1977,
